<resources>
    <string name="app_name">Grepaut</string>
    <!--Login-->
    <string name="tvUser">Email</string>
    <string name="tvPassword">Password</string>
    <string name="chRecordar">Recordar</string>
    <string name="btnRegistrar">Registrarse</string>
    <string name="btnIniciarSesion">Iniciar sesión</string>
    <string name="btnGoogle">Google</string>
    <string name="btnFacebook">Facebook</string>
    <string name="btnTwitter">Twitter</string>
    <string name="OrtherSign">Registrarse con cuenta</string>

    <!--Registro-->
    <string name="tepassword">contraseña</string>
    <string name="tedConfirmPassword">confirmar contraseña</string>
    <string name="tedNombreEmpresa">Nombre de empresa</string>
    <string name="tvTipoUsuario">Tipo de usuario:</string>
    <string name="rdAdministrador">Administrador</string>
    <string name="rbUsuario">Usuario</string>
    <string name="btnRegistro">Guardar</string>
    <string name="tedNombre">Nombre</string>
    <string name="tedEmail">Email</string>
    <string name="tilLoginemail">Email</string>
    <string name="tilpassword">Password</string>

    <string name="title_activity_manager">ManagerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu">Menu</string>
    <string name="menu_reparaciones">Reparaciones</string>
    <string name="menu_clientes">Clientes</string>
    <string name="menu_servicios">Servicios</string>
    <string name="menu_facturas">Facturas</string>
    <string name="menu_compartir">Compartir</string>
    <string name="menu_enviar">Enviar</string>
    <string name="anadir_reparacion">"Añadir Reparación.</string>
    <string name="anadir_servicios">Añadir/Actualizar Servicio</string>
    <string name="anadir_cliente">Añadir/Actualizar Cliente</string>
    <string name="anadir_clientes">Añadir/Actualizar Clientes</string>
    <string name="nav_header_subtitulo">Developez</string>
    <string name="ajustes">Ajustes</string>
    <string name="SplashDelLogo">Imagen del logo de la app</string>
    <string name="nombretvNombreApellidosCliente">Nombre:</string>
    <string name="tvMatriculaCocheCliente">Matricula:</string>
    <string name="tvIdCliente">25</string>
    <string name="tvNumeroReparacion">25</string>
    <string name="tvFechaReparacion">Fecha:</string>
    <string name="tvMatriculaCocheReparacion">Matricula:</string>

    <!--Añadir reaparacion o reparacionAdd-->
    <string name="btnSelectFechaRepaAdd">Modificar fecha</string>
    <string name="tvFechaRepaAdd">Fecha de Reparación:</string>
    <string name="tvFechaSelecioandaRepaAdd">##Sin fecha##</string>
    <string name="tvNomClienteRepaAdd">Nombre de Cliente</string>
    <string name="tvNombreClienteRepaAdd">##Nombre Cliente##</string>
    <string name="tvMatriculaRepaAdd">Matricula vehículo:</string>
    <string name="tvServicioRepaAdd">Servicio:</string>
    <string name="btnAnadirOtroServicioRepaAdd">Añadir otro servicio</string>
    <string name="btnInsertarReparacionRepaAdd">Guardar reparaciónes</string>

    <!--lista de servicios-->
    <string name="tvNombreServicios">Nombre:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Añadir/Editar Cliente-->
    <string name="tiNombreClienteAddEdit">Nombre</string>
    <string name="tiApellidoClienteAddEdit">Apellidos</string>
    <string name="tiMatriculaClienteAddEdit">Matícula vehículo</string>
    <string name="titlfClienteAddEdit">Teléfono</string>
    <string name="tiemailClienteAddEdit">Email</string>
    <string name="btnGuardarClienteAddEdit">Guardar</string>
    <string name="Loginpassword">Password</string>

    <!--Añadir/Editar Servicio-->
    <string name="tiNombreServicioAddEdit">Nombre</string>
    <string name="tiPrecioServicioAddEdit">Precio</string>
    <string name="tiDescripciónClienteAddEdit">Descripción</string>
    <string name="btnGuardarServicioAddEdit">Guardar</string>

    <!--Listado de Facturas-->
    <string name="tvFechaReparacionlistFacturas">Fecha reparación:</string>
    <string name="tvFechaFacturacionlistFacturas">Fecha facturación:</string>

    <!--Notificaciones-->
    <string name="nombreCanalNotificaciones">Grepaut</string>
    <string name="descripcionCanalNotificaciones">Canal de notificaciones de Grepaut</string>
</resources>
