<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_reparaciones"
            android:icon="@drawable/ic_menu_reparaciones"
            android:title="@string/menu_reparaciones" />
        <item
            android:id="@+id/nav_clientes"
            android:icon="@drawable/ic_menu_clientes"
            android:title="@string/menu_clientes" />
        <item
            android:id="@+id/nav_servicios"
            android:icon="@drawable/ic_menu_servicios"
            android:title="@string/menu_servicios" />
        <item
            android:id="@+id/nav_facturas"
            android:icon="@drawable/ic_menu_money"
            android:title="@string/menu_facturas" />
    </group>

    <item android:title="Comunicacion">
        <menu>
            <item
                android:id="@+id/nav_compartir"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_compartir" />
        </menu>
    </item>

</menu>
