<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_reparaciones"
>
<!--    app:startDestination="@+id/nav_reparaciones"-->
    <fragment
        android:id="@+id/nav_reparaciones"
        android:name="com.pablolopezs.grepaut.ui.ManagerActivity.reparacion.FragmentReparacion"
        android:label="@string/menu_reparaciones"
        tools:layout="@layout/fragment_reparacion" />

    <fragment
        android:id="@+id/nav_clientes"
        android:name="com.pablolopezs.grepaut.ui.ManagerActivity.cliente.FragmentCliente"
        android:label="@string/menu_clientes"
        tools:layout="@layout/fragment_cliente" />

    <fragment
        android:id="@+id/nav_servicios"
        android:name="com.pablolopezs.grepaut.ui.ManagerActivity.servicio.FragmentServicio"
        android:label="@string/menu_servicios"
        tools:layout="@layout/fragment_servicio" />

    <fragment
        android:id="@+id/nav_facturas"
        android:name="com.pablolopezs.grepaut.ui.ManagerActivity.factura.FragmentFactura"
        android:label="@string/menu_facturas"
        tools:layout="@layout/fragment_factura" />


</navigation>