<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/clRegisterPadding"
    tools:context=".RegistroActivity">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilemail"
        style="@style/miTil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="64dp"
        android:layout_marginRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.636"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tedemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tedEmail"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilnombre"
        style="@style/miTil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilemail"
        android:layout_margin="@dimen/lmTil">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tednombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tedNombre"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilpassword"
        style="@style/miTil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilnombre"
        android:layout_margin="@dimen/lmTil"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tedpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tepassword"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilConfirmPassword"
        style="@style/miTil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.981"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilpassword"
        android:layout_margin="@dimen/lmTil"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tedConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tedConfirmPassword"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilNombreEmpresa"
        style="@style/miTil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/ltinMargin"
        app:layout_constraintTop_toBottomOf="@+id/tilConfirmPassword">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tedNombreEmpresa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tedNombreEmpresa"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvTipoUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/lmtvToptvTipoUsuario"
        android:text="@string/tvTipoUsuario"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilNombreEmpresa" />

    <RadioGroup
        android:id="@+id/rgTipoDeUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTipoUsuario">

        <RadioButton
            android:id="@+id/rdAdministrador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rdAdministrador"
            style="@style/rdb"/>

        <RadioButton
            android:id="@+id/rbUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbUsuario"
            style="@style/rdb"/>

    </RadioGroup>

    <Button
        android:id="@+id/btnregistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/lmtopBtnRegistro"
        android:layout_marginBottom="@dimen/lmBottomBtnRegistro"
        android:background="@drawable/selector_round_corner"
        android:text="@string/btnRegistro"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgTipoDeUsuario"
        app:layout_constraintVertical_bias="1.0"
        app:passwordToggleEnabled="true" />


</androidx.constraintlayout.widget.ConstraintLayout>