<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <!--Imagen perfil del NavigationDrawer-->
    <ImageView
        android:id="@+id/imgvUser"
        android:layout_width="94dp"
        android:layout_height="74dp"
        android:layout_gravity="top"
        android:contentDescription="@string/nav_header_desc"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        app:srcCompat="@drawable/logov3" />

    <TextView
        android:id="@+id/tvemailUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:layout_marginLeft="15dp"
        android:text="@string/app_name"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/tvnombreEmpresa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:layout_marginLeft="15dp"
        android:text="@string/nav_header_subtitulo"
        android:textSize="10dp"
        android:textColor="@color/white"/>

</LinearLayout>
