<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.reparacion.ReparacionAdd">

    <!-- TODO: Update blank fragment layout -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvFechaReparacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="@dimen/cabecerasCampos"
            android:text="@string/tvFechaRepaAdd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvFechaSelecionada"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/tvFechaSelecioandaRepaAdd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvFechaReparacion"
            android:background="@color/whiteBrokenEgg"/>

        <Button
            android:id="@+id/btnDatePicker"
            style="@style/botonesSelecionarFechaAlaRepa_FormaYColor"
            android:layout_width="95dp"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"
            android:text="@string/btnSelectFechaRepaAdd"
            android:textSize="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.506"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvFechaSelecionada" />

        <TextView
            android:id="@+id/tvIdCliente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="@dimen/cabecerasCampos"
            android:text="@string/tvIdClienteRepaAdd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnDatePicker" />

        <Spinner
            android:id="@+id/spIdCliente"
            android:layout_width="117dp"
            android:layout_height="20dp"
            android:layout_marginStart="68dp"
            android:backgroundTint="@color/colorPrimaryDark"
            app:layout_constraintBottom_toBottomOf="@+id/tvNombreCliente"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/tvNombreCliente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="72dp"
            android:text="@string/tvNombreClienteRepaAdd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvIdCliente"
            android:background="@color/whiteBrokenEgg"/>

        <TextView
            android:id="@+id/tvMatricula"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="@dimen/cabecerasCampos"
            android:text="@string/tvMatriculaRepaAdd"
            app:layout_constraintEnd_toEndOf="@+id/tvNombreCliente"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="@+id/spIdCliente"
            app:layout_constraintTop_toBottomOf="@+id/tvIdCliente" />

        <Spinner
            android:id="@+id/spMatricula"
            android:layout_width="346dp"
            android:layout_height="25dp"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvMatricula"
            android:backgroundTint="@color/colorPrimaryDark"/>

        <TextView
            android:id="@+id/tvServicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="@dimen/cabecerasCampos"
            android:text="@string/tvServicioRepaAdd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spMatricula" />

        <Spinner
            android:id="@+id/spServicio"
            android:layout_width="346dp"
            android:layout_height="25dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvServicio" />

        <ImageButton
            android:id="@+id/btnAnadirServicio"
            style="@style/botonesAnadirOtroServicioAlaRepa_FormaYColor"
            android:layout_width="63dp"
            android:layout_height="35dp"
            android:layout_marginTop="44dp"
            android:src="@drawable/ic_otro_servicio_repa_add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spServicio" />

        <ImageButton
            android:id="@+id/imgbtnInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:background="@drawable/select_round_btn_sin_fondo"
            android:src="@drawable/ic_info"
            app:layout_constraintBottom_toBottomOf="@+id/btnAnadirServicio"
            app:layout_constraintStart_toEndOf="@+id/btnAnadirServicio"
            app:layout_constraintTop_toTopOf="@+id/btnAnadirServicio"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/btnInsertarReparacion"
            style="@style/botonesBase_FormaYColor"
            android:layout_width="113dp"
            android:layout_height="38dp"
            android:layout_marginTop="32dp"
            android:text="@string/btnInsertarReparacionRepaAdd"
            android:textSize="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnAnadirServicio" />



    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>